--- a/LocatorsHtml/TagName.html
+++ b/LocatorsHtml/TagName.html
@@ -7,7 +7,7 @@
 <body>
 	<div align="center">
 		Username<input type="text"></br>
-		</br> <a href="http://www.google.co.in/">google india</a></br>
+		</br> <a href="http://www.google.co.in/">Google India</a></br>
 		</br>
 	</div>
 </body>
